[project]
name = "VAD"
version = "0.1.0"
description = "Entrega - Visualización Avanzada de Datos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.4",
    "geopandas>=1.1.1",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "plotly>=6.3.1",
    "polars>=1.34.0",
    "scipy>=1.17.0",
]
